k8s/overlays/telge/simulator.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simulator-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  tls:
    - hosts:
        - telge.iteam.pub
      secretName: telge-prod-tls
  rules:
    - host: telge.iteam.pub
      http:
        paths:
          - path: /socket\.io(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: simulator
                port:
                  number: 4000
          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: simulator
                port:
                  number: 4000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simulator
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  template:
    spec:
      containers:
        - name: simulator
          resources:
            requests:
              cpu: "1500m"
              memory: "2Gi"
            limits:
              cpu: "3"
              memory: "4Gi"
