k8s/overlays/telge/visualisation.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: visualisation-route
spec:
  hostnames:
    - telge.iteam.pub
